# keyword-collector

./: README.md  pyproject.toml
constants/: environment_variables.py  global_constants.py
keyword_collector/: __init__.py  config.py  data_fetcher.py  file_writer.py  main.py  tag_data.py
